# BadWDSD

./: README.md  clean.sh  qcfwgen0.sh  qcfwgen_lv2diff.sh  qcfwgen_lv2self.sh  qcfwgen_lv2self_pex.sh  qcfwgen_lv2zdiff.sh  qcfwgen_lv2zfself.sh  qcfwgen_petitboot.sh
BadWDSD/: build-all.sh  build.sh
BadWDSD-SW/: Makefile
BadWDSD-SW/source/: Include.h  Lv1.cpp  Lv1.h  Lv1Exec.cpp  Main.cpp
BadWDSD-Stage/: Spu.c  SpuAux.c  Stage1.c  Stage2.c  Stage3.c  Stage4.c  Stage4j.c  Stage5.c  Stage6.c  Stage6j.S  Stagex.c  Stagex.ld  build.sh  notes.txt
BadWDSD-Stage/Aes/: Aes.c
BadWDSD-Stage/Aux/: Stagex_spu.c  Stagex_spu_common.c  build.sh  mymetldr.S  mymetldr.c  mymetldr.ld  notes.txt
BadWDSD/BadWDSD/: CMakeLists.txt  DebugUart.c  Gpio.c  Include.h  Led.c  Main.c  Sc.c
BadWDSD/pico_sdk/src/rp2_common/tinyusb/: CMakeLists.txt
patches/: build.sh
patches/aim/: aim_get_device_id.S  aim_get_device_id.elf  aim_get_device_type.S  aim_get_device_type.elf  aim_get_ps_code.S  aim_get_ps_code.elf  build.sh
patches/lv2_pex/: build.sh  get_device_id.S  get_device_id.elf  get_device_type.S  get_device_type.elf  get_pscode.S  get_pscode.elf
qcfw-lite/: qcfwlite492cex_lv1.diff  qcfwlite492cex_lv2_kernel.zdiff
spu/myappldr/: build.sh  eid0.S  myappldr.elf  protect_key_ring.c  protect_key_ring.elf  read_key_ring.c  read_key_ring.elf
tools/coreos_tools/: coreos_tools.cpp
tools/lv0gen/: lv0gen.cpp
tools/lv1gen/: lv1gen.cpp
tools/lv2gen/: lv2gen.cpp
